--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,9 @@ name = "mcp-memory"
 version = "0.1.0"
 description = "A persistent vector memory MCP server with multi-project isolation"
 authors = [
-    { name = "User", email = "user@example.com" }
+    { name = "Jaiprakash Sharma", email = "user@example.com" }
 ]
+license = { text = "MIT" }
 dependencies = [
     "mcp>=1.0.0",
     "lancedb>=0.17.0",
