--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,12 @@ dependencies = [
 ]
 requires-python = ">=3.10"
 
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "pytest-asyncio"
+]
+
 [project.scripts]
 mcp-memory = "mcp_memory.server:main"
 mcp-ingest = "mcp_memory.ingest:main"
