--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "mcp>=1.0.0",
     "lancedb>=0.17.0",
     "sentence-transformers>=3.3.0",
-    "torch>=2.2.0"
+    "torch>=2.2.0",
+    "pypdf>=3.0.0"
 ]
 requires-python = ">=3.10"
 
