--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,10 @@ dependencies = [
     "lancedb>=0.17.0",
     "sentence-transformers>=3.3.0",
     "torch>=2.2.0",
-    "pypdf>=3.0.0"
+    "pypdf>=3.0.0",
+    "uvicorn>=0.30.0",
+    "starlette>=0.37.0",
+    "sse-starlette>=2.1.0"
 ]
 requires-python = ">=3.10"
 
