--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,28 @@
 name = "mcp-memory"
 version = "0.2.0"
 description = "A persistent vector memory MCP server with multi-project isolation"
+readme = "README.md"
 authors = [
     { name = "Jaiprakash Sharma", email = "user@example.com" }
 ]
 license = { text = "MIT" }
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence"
+]
+keywords = ["mcp", "memory", "vector-database", "lancedb", "windsurf", "cursor", "rag"]
+urls = {
+    "Homepage" = "https://github.com/iamjpsharma/MCPServer",
+    "Repository" = "https://github.com/iamjpsharma/MCPServer.git",
+    "Issues" = "https://github.com/iamjpsharma/MCPServer/issues"
+}
 dependencies = [
     "mcp>=1.0.0",
     "lancedb>=0.17.0",
@@ -21,7 +39,9 @@ requires-python = ">=3.10"
 [project.optional-dependencies]
 dev = [
     "pytest",
-    "pytest-asyncio"
+    "pytest-asyncio",
+    "build",
+    "twine"
 ]
 
 [project.scripts]
