--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "mcp-memory"
+name = "fremem"
 version = "0.2.0"
 description = "A persistent vector memory MCP server with multi-project isolation"
 readme = "README.md"
@@ -19,11 +19,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence"
 ]
 keywords = ["mcp", "memory", "vector-database", "lancedb", "windsurf", "cursor", "rag"]
-urls = {
-    "Homepage" = "https://github.com/iamjpsharma/MCPServer",
-    "Repository" = "https://github.com/iamjpsharma/MCPServer.git",
-    "Issues" = "https://github.com/iamjpsharma/MCPServer/issues"
-}
+urls = { Homepage = "https://github.com/iamjpsharma/fremem", Repository = "https://github.com/iamjpsharma/fremem.git", Issues = "https://github.com/iamjpsharma/fremem/issues" }
 dependencies = [
     "mcp>=1.0.0",
     "lancedb>=0.17.0",
@@ -45,8 +41,8 @@ dev = [
 ]
 
 [project.scripts]
-mcp-memory = "mcp_memory.server:main"
-mcp-ingest = "mcp_memory.ingest:main"
+fremem = "fremem.server:main"
+fremem-ingest = "fremem.ingest:main"
 
 [build-system]
 requires = ["hatchling"]
